# nodegui-plugin-animation

./: CMakeLists.txt  README.md  package-lock.json  package.json
src/: demo.ts  index.ts
src/cpp/: main.cpp
src/cpp/QAbstractAnimation/: qabstractanimation_macro.h
src/cpp/QPropertyAnimation/: npropertyanimation.hpp  qpropertyanimation_wrap.cpp  qpropertyanimation_wrap.h
src/cpp/QStatusBar/: qstatusbar_wrap.h
src/cpp/QVariantAnimation/: nvariantanimation.hpp  qvariantanimation_macro.h  qvariantanimation_wrap.cpp  qvariantanimation_wrap.h
src/lib/: QAbstractAnimation.ts  QPropertyAnimation.ts  QVariantAnimation.ts
src/lib/QStatusBar/: index.ts
src/lib/utils/: addon.ts
